--- a/FL11_HW19/homework/package.json
+++ b/FL11_HW19/homework/package.json
@@ -16,6 +16,7 @@
     "file-loader": "^4.2.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
+    "html-webpack-plugin-remove": "^0.1.0",
     "imagemin-mozjpeg": "^8.0.0",
     "imagemin-webpack": "^5.1.0",
     "less": "^3.10.3",
